welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:10: error: ';' expected but string literal found.
    	retrun "7:00"
               ^